# latte

./: .gitignore  Makefile  README.md  clean_grammar.sh  latte.cabal  remake_grammar.sh
basic/msz/good/: string_equality_const.lat
lib/: runtime.bc  runtime.ll
src/Latte/: Latte.cf  Main.hs  MainH.hs
src/Latte/Backend/: Compiler.hs  Type.hs
src/Latte/Frontend/: BasicChecker.hs  Optimisations.hs  Precompiler.hs  TypeChecker.hs
src/Latte/Internal/: ASTInternal.hs  BuiltIn.hs  ErrM.hs  Type.hs
testsuite/: Test.hs  runtests.sh
testsuite/tests/mytests/good/: big_number.lat  big_number.output  class.lat  class.output  class2.lat  class3.lat  class4.lat  string_ref_eq.lat
