name:                 latte
version:              0.1.0.0
build-type:           Simple
cabal-version:        >=1.10

executable latc_llvm
  main-is:              Latte/Main.hs
  build-depends:        base >= 4.7 && < 5, base, array, mtl, containers, transformers, process, filepath,
                          llvm-general-pure, llvm-general, cond
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -main-is Latte.Main -threaded

test-suite test
  type:       exitcode-stdio-1.0
  main-is:    Test.hs
  hs-source-dirs:  testsuite
  build-depends: base, array, mtl, containers, transformers, process
  default-language:  Haskell2010
