name:                 latte
version:              0.1.1.0
build-type:           Simple
cabal-version:        >=1.10

executable latc_llvm
  main-is:              Latte/Main.hs
  build-depends:        base >= 4.6 && < 5, array, mtl, containers, process >= 1.2.0.0, filepath,
                          llvm-general-pure, llvm-general, cond
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -main-is Latte.Main -threaded -W

test-suite test
  type:       exitcode-stdio-1.0
  main-is:    Test.hs
  hs-source-dirs:  testsuite
  build-depends: base, array, mtl, containers, transformers, process
  default-language:  Haskell2010
